<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2023 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and limitations under the License.
  -->

<resources>
  <string name="sign_in_title">Welcome back!</string>
  <string name="sign_in_your_profile">Sign In your profile</string>
  <string name="email_address">Email Address</string>
  <string name="password">Password</string>
  <string name="sign_in">Sign In</string>
  <string name="sign_up">Sign Up</string>
</resources>
